feat: front-end requirements, add user and video fuzzy search functionality
