# router/video.go
@@ -10,13 +10,17 @@ func InitVideoRoutes() {
 		videoApi := api.NewVideoApi()
 		videoDefaultGroup := dfGroup.Group("video")
 		{
-			// 视频feed流
-			videoDefaultGroup.GET("/feed/index", videoApi.GetVideoFeed)
+			// 主页视频feed流
+			videoDefaultGroup.GET("/feed", videoApi.GetVideoFeed)
 			// 用户发布视频列表
 			videoDefaultGroup.GET("/list", videoApi.GetUserVideoList)
+			// 视频搜索
+			videoDefaultGroup.GET("/search", videoApi.GetVideoSearch)
 		}
 		videoAuthGroup := auGroup.Group("video")
 		{
+			// 推荐，关注，朋友页视频feed流
+			videoAuthGroup.GET("/feed", videoApi.GetVideoFeed)
 			// 发布视频
 			videoAuthGroup.POST("/publish", videoApi.PublishVideo)
 			// 删除视频
